@@ -1220,9 +1220,11 @@ static bool c_ast_check_func_params( c_ast_t const *ast ) {
       return false;
   } // for
 
-  if ( variadic_ast != NULL && n_params == 1 ) {
+  if ( !OPT_LANG_IS( VARIADIC_ONLY_PARAMETER ) &&
+       variadic_ast != NULL && n_params == 1 ) {
     print_error( &variadic_ast->loc,
-      "variadic specifier can not be only parameter\n"
+      "variadic specifier can not be only parameter%s\n",
+      C_LANG_WHICH( VARIADIC_ONLY_PARAMETER )
     );
     return false;
   }
