@@ -1,4 +1,7 @@
-EXPECTED_EXIT=65
+EXPECTED_EXIT=0
 cdecl <<END
+explain void f( ... )
+
+set c++
 explain void f( ... )
 END
